--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ kramdown:
   input: GFM
 
 # Ignore files and folders
-exclude: ['README.md']
+exclude: ['README.md','rental.md']
 permalink: pretty
 
 #social media links
@@ -22,3 +22,4 @@ facebook: "https://www.facebook.com/cymourholidays"
 twitter: "http://twitter.com/cymour"
 instagram: "http://instagram.com/cymour"
 strava: "http://strava.com/cymour"
+phone: "+91 20 6060 3333" 
