Updated site phone

--- a/_config.yml
+++ b/_config.yml
@@ -22,4 +22,4 @@ facebook: "https://www.facebook.com/cymourholidays"
 twitter: "http://twitter.com/cymour"
 instagram: "http://instagram.com/cymour"
 strava: "http://strava.com/cymour"
-phone: "+91 20 6060 3333" 
+phone: "+91 9527 00 99 22" 
