Changed twitter and fb links

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ exclude: ['README.md','rental.md']
 permalink: pretty
 
 #social media links
-facebook: "https://www.facebook.com/cymourholidays"
-twitter: "http://twitter.com/cymour"
+facebook: "https://www.facebook.com/cymourcycling"
+twitter: "http://twitter.com/cymourcycling"
 instagram: "http://instagram.com/cymour"
 strava: "http://strava.com/cymour"
 phone: "+91 9527 00 99 22" 
