Changed instagram link.

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,6 @@ permalink: pretty
 #social media links
 facebook: "https://www.facebook.com/cymourcycling"
 twitter: "http://twitter.com/cymourcycling"
-instagram: "http://instagram.com/cymour"
+instagram: "http://instagram.com/cymourcyclingco"
 strava: "http://strava.com/cymour"
 phone: "+91 9527 00 99 22" 
